# crop_recommendation

./: .gitignore  DEPLOYMENT.md  README.md  app.py  model.pkl  model.py  pyproject.toml  render.yaml  requirements.txt
templates/: index.html
