[project]
name = "crop-recommendation"
version = "1.0.0"
description = "AI-Powered Crop Recommendation System"
requires-python = ">=3.10,<3.13"
dependencies = [
    "Flask>=2.3.0",
    "Flask-CORS>=4.0.0",
    "scikit-learn>=1.2.0,<1.4",
    "pandas>=1.4.0",
    "numpy>=1.21.0,<2.0",
    "gunicorn>=21.0.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
