[project]
name = "crop-recommendation"
version = "1.0.0"
description = "AI-Powered Crop Recommendation System"
requires-python = ">=3.10"
dependencies = [
    "Flask==2.3.3",
    "Flask-CORS==4.0.0",
    "scikit-learn==1.0.2",
    "pandas==1.5.3",
    "numpy==1.23.5",
    "gunicorn==20.1.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
