[project]
name = "crop-recommendation"
version = "1.0.0"
description = "AI-Powered Crop Recommendation System"
requires-python = ">=3.11,<3.12"
dependencies = [
    "Flask==3.0.0",
    "Flask-CORS==4.0.0",
    "scikit-learn==1.4.2",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "gunicorn==21.2.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
